[project]
name = "dropbox-downloader"
version = "1.0.0"
description = "Python CLI tool to recursively download files and folders from Dropbox"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "docopt-ng>=0.9.0",
    "dropbox>=9.4.0",
]

[project.scripts]
dbx-dl = "dropbox_downloader.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
